Update and rename index.html to Home.html

--- a/Home.html
+++ b/Home.html
@@ -62,7 +62,7 @@
         <nav class="menu jw-menu-copy clear">
             <ul id="jw-menu" class="jw-menu jw-menu-horizontal">
             <li class="jw-menu-item jw-menu-is-active">
-        <a class="jw-menu-link js-active-menu-item" href="/" data-page-link-id="17079820">
+        <a class="jw-menu-link js-active-menu-item" href="https://dnm23.github.io/ourlibrary.com/Home" data-page-link-id="17079820">
                 <span class="">
             Home        </span>
             </a>
@@ -159,7 +159,7 @@
 >
         <a
         class="jw-menu-link js-active-menu-item"
-        href="https://dnm23.github.io/ourlibrary.com/"
+        href="https://dnm23.github.io/ourlibrary.com/Home"
                                             data-page-link-id="17079820">
                             >
                 <span class="">
