--- a/2/books.html
+++ b/2/books.html
@@ -4,9 +4,9 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chroom,opera">
-        <link rel="canonical" href="https://dnm23.github.io/ourlibrary.com/books">
+        <link rel="canonical" href="https://dnm23.github.io/ourlibrary.com/2/books">
         <meta property="og:title" content="Books | Ourlibrary">
-        <meta property="og:url" content="https://dnm23.github.io/ourlibrary.com/books">
+        <meta property="og:url" content="https://dnm23.github.io/ourlibrary.com/2/books">
         
         <meta name="description" property="og:description" content="">
                 <script nonce="">
@@ -31,7 +31,7 @@
   <link rel="stylesheet" href="styles.css">
             </head>
     <body id="top" class="jw-is-no-slideshow jw-header-is-image-text jw-is-segment-page jw-is-frontend jw-is-no-sidebar jw-is-no-messagebar jw-is-no-touch-device jw-is-no-mobile" data-jouwweb-page="17079931" data-jouwweb-segment-id="17079931" data-jouwweb-segment-type="page" data-template-threshold="960" data-template-name="beautysalon|fotografie" itemscope="" itemtype="https://schema.org/WebPage">
-        <meta itemprop="url" content="https://dnm23.github.io/ourlibrary.com/books">
+        <meta itemprop="url" content="https://dnm23.github.io/ourlibrary.com/2/books">
         <div class="jw-background"></div>
         <div class="jw-body">
             <div class="jw-mobile-menu jw-mobile-is-text js-mobile-menu">
