--- a/3/farsi-f-rs.html
+++ b/3/farsi-f-rs.html
@@ -5,9 +5,9 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link rel="canonical" href="https://dnm23.github.io/ourlibrary.com/books/farsi-f-rs">
+        <link rel="canonical" href="https://dnm23.github.io/ourlibrary.com/3/books/farsi-f-rs">
         <meta property="og:title" content="Farsi فارسی / Books | Ourlibrary">
-        <meta property="og:url" content="https://dnm23.github.io/ourlibrary.com/books/farsi-f-rs">
+        <meta property="og:url" content="https://dnm23.github.io/ourlibrary.com/3/books/farsi-f-rs">
         
         <meta name="description" property="og:description" content="">
                 <script nonce="">
@@ -36,13 +36,13 @@
   <link rel="stylesheet" href="styles.css">
             </head>
     <body id="top" class="jw-is-no-slideshow jw-header-is-image-text jw-is-segment-page jw-is-frontend jw-is-no-sidebar jw-is-no-messagebar jw-is-no-touch-device jw-is-no-mobile" data-jouwweb-page="17079939" data-jouwweb-segment-id="17079939" data-jouwweb-segment-type="page" data-template-threshold="960" data-template-name="beautysalon|fotografie" itemscope="" itemtype="https://schema.org/WebPage">
-        <meta itemprop="url" content="https://dnm23.github.io/ourlibrary.com/books/farsi-f-rs">
+        <meta itemprop="url" content="https://dnm23.github.io/ourlibrary.com/3/books/farsi-f-rs">
         <div class="jw-background"></div>
         <div class="jw-body">
             <div class="jw-mobile-menu jw-mobile-is-text js-mobile-menu">
             <span class="jw-mobile-menu__button jw-mobile-menu__button--dummy"></span>        <div class="jw-mobile-header jw-mobile-header--image-text">
         <a class="jw-mobile-header-content" href="/">
-                            <img class="jw-mobile-logo jw-mobile-logo--square" src="images/image-2.png" srcset="images/image-2.png 1x, images/image-2_2.png 2x" alt="Mylibrary" title="Mylibrary">                                        <div class="jw-mobile-text">
+                            <img class="jw-mobile-logo jw-mobile-logo--square" src="images/image-2.png" srcset="images/image-2.png 1x, images/image-2_2.png 2x" alt="ourylibrary" title="ourlibrary">                                        <div class="jw-mobile-text">
                     <span style="display: inline-block; font-size: 30px;"><span style="display: inline-block; font-size: 30px;"> <span style="display: inline-block; font-size: 28px;">کتاب خانه ما</span> </span></span>                </div>
                     </a>
     </div>
