--- a/live/live-sport.html
+++ b/live/live-sport.html
@@ -4,9 +4,9 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chroom,opera,firefox">
-        <link rel="canonical" href="https://dnm23.github.io/ourlibrary.com/Live-sport">
+        <link rel="canonical" href="https://dnm23.github.io/ourlibrary.com/live/Live-sport">
         <meta property="og:title" content="ourlibrary">
-        <meta property="og:url" content="https://dnm23.github.io/ourlibrary.com/Live-sport">
+        <meta property="og:url" content="https://dnm23.github.io/ourlibrary.com/live/Live-sport">
         
         <meta name="description" property="og:description" content="">
                 <script nonce="">
@@ -30,7 +30,7 @@
                     <meta property="og:image" content="images/dummy-high-high_1-high_1.webp">
                                     <meta name="twitter:card" content="summary_large_image">
                         <meta property="twitter:image" content="https://primary.jwwb.nl/public/x/o/n/temp-kiuderrwxhnjisjswuwn/heroes_16x9_vdraw-1-high.jpg?enable-io=true&amp;enable=upscale&amp;fit=bounds&amp;width=1200">
-                                        <link rel="alternate" hreflang="en-GB" href="https://dnm23.github.io/ourlibrary.com/Live-sport">
+                                        <link rel="alternate" hreflang="en-GB" href="https://dnm23.github.io/ourlibrary.com/live/Live-sport">
 
                                             <script src="js/script.manual.js" nonce="" defer="1" data-domain="shard11.jouwweb.nl"></script>
 <link rel="stylesheet" type="text/css" href="https://gfonts.jwwb.nl/css?display=fallback&amp;family=Roboto%3A400%2C700%2C400italic%2C700italic">
@@ -41,7 +41,7 @@
 <link rel="preconnect" href="https://assets.jwwb.nl">
 <link rel="stylesheet" type="text/css" href="css/style.css">    </head>
     <body id="top" class="jw-is-no-slideshow jw-header-is-image-text jw-is-segment-page jw-is-frontend jw-is-no-sidebar jw-is-no-messagebar jw-is-no-touch-device jw-is-no-mobile" data-jouwweb-page="23450759" data-jouwweb-segment-id="23450759" data-jouwweb-segment-type="page" data-template-threshold="960" data-template-name="beautysalon|fotografie" itemscope="" itemtype="https://schema.org/WebSite">
-        <meta itemprop="url" content="https://dnm23.github.io/ourlibrary.com/Live-sport">
+        <meta itemprop="url" content="https://dnm23.github.io/ourlibrary.com/live/Live-sport">
         <div class="jw-background"></div>
         <div class="jw-body">
             <div class="jw-mobile-menu jw-mobile-is-text js-mobile-menu">
