--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     </ul>
         </li>
             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/Live-sport" target="_blank" rel="noopener" data-link-id="23774449">
+        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/Live-sport" data-link-id="23774449">
                 <span class="">
             Live sport        </span>
             </a>
