--- a/series/index.html
+++ b/series/index.html
@@ -146,7 +146,7 @@
                     </ul>
         </li>
             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/live-sport" data-page-link-id="23458119">
+        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/Live-sport" data-page-link-id="23458119">
                 <span class="">
             Live Sport        </span>
             </a>
