--- a/Live-sport/index.html
+++ b/Live-sport/index.html
@@ -2,9 +2,9 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link rel="canonical" href="https://dnm23.github.io/ourlibrary.com/live-sport">
+        <link rel="canonical" href="https://dnm23.github.io/ourlibrary.com/Live-sport">
         <meta property="og:title" content="Live sport | Ourlibrary">
-        <meta property="og:url" content="https://dnm23.github.io/ourlibrary.com/live-sport">
+        <meta property="og:url" content="https://dnm23.github.io/ourlibrary.com/Live-sport">
         
         <meta name="description" property="og:description" content="">
                 <script nonce="">
@@ -318,8 +318,8 @@
     >
             <a
             class="jw-menu-link js-active-menu-item"
-            href="https://dnm23.github.io/ourlibrary.com/live-sport"
-                                                data-page-link-id="24028680"
+            href="https://dnm23.github.io/ourlibrary.com/Live-sport"
+                                                data-page-link-id="23774449"
                                 >
                     <span class="">
                 Live-sport        </span>
