--- a/Live-sport/index.html
+++ b/Live-sport/index.html
@@ -148,7 +148,7 @@
                 </li>
                     </ul>
         </li>
-                <li class="jw-menu-item jw-menu-is-active">
+                <li class="jw-menu-item">
             <a class="jw-menu-link js-active-menu-item" href="https://dnm23.github.io/ourlibrary.com/Live-sport" data-link-id="23774449">
                     <span class="">
                 Live sport        </span>
@@ -317,7 +317,7 @@
         class="jw-menu-item jw-menu-is-active"
     >
             <a
-            class="jw-menu-link js-active-menu-item"
+            class="jw-menu-link"
             href="https://dnm23.github.io/ourlibrary.com/Live-sport"
                                                 data-page-link-id="23774449"
                                 >
