--- a/f-lm-h-o-doblh/index.html
+++ b/f-lm-h-o-doblh/index.html
@@ -139,7 +139,7 @@
                     </ul>
         </li>
             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/live-sport" data-page-link-id="23458119">
+        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/Live-sport" data-page-link-id="23774449">
                 <span class="">
             Live Sport        </span>
             </a>
@@ -307,8 +307,8 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/live-sport"
-                                            data-page-link-id="23458119"
+        href="https://dnm23.github.io/ourlibrary.com/Live-sport"
+                                            data-page-link-id="23774449"
                             >
                 <span class="">
             Live Sport        </span>
