--- a/films/index.html
+++ b/films/index.html
@@ -308,7 +308,7 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/live-sport"
+        href="https://dnm23.github.io/ourlibrary.com/Live-sport"
                                             data-link-id="23774449"
                             >
                 <span class="">
