--- a/sr-l-kh-r-g/index.html
+++ b/sr-l-kh-r-g/index.html
@@ -138,7 +138,7 @@
                     </ul>
         </li>
             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/live-sport" data-page-link-id="23458119">
+        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/live-sport" data-link-id="23774449">
                 <span class="">
             Live Sport        </span>
             </a>
@@ -256,7 +256,7 @@
                                             data-page-link-id="17081982"
                             >
                 <span class="">
-            فیلم هاو دوبله        </span>
+            فیلم هاى دوبله        </span>
             </a>
                 </li>
                     </ul>
@@ -308,7 +308,7 @@
         <a
         class="jw-menu-link"
         href="https://dnm23.github.io/ourlibrary.com/live-sport"
-                                            data-page-link-id="23458119"
+                                            data-link-id="23774449"
                             >
                 <span class="">
             Live Sport        </span>
