--- a/english-n-l-s/index.html
+++ b/english-n-l-s/index.html
@@ -144,7 +144,7 @@
                     </ul>
         </li>
             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/live-sport" data-page-link-id="23774449">
+        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/Live-sport" data-link-id="23774449">
                 <span class="">
             Live Sport        </span>
             </a>
@@ -312,9 +312,9 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/live-sport"
-                                            data-page-link-id="23774449"
-                            >
+        href="https://dnm23.github.io/ourlibrary.com/Live-sport" 
+                                            data-link-id="23774449">
+                            
                 <span class="">
             Live Sport        </span>
             </a>
