--- a/farsi-f-rs/index.html
+++ b/farsi-f-rs/index.html
@@ -142,7 +142,7 @@
                     </ul>
         </li>
             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/Live-sport" data-page-link-id="23774449">
+        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/Live-sport" data-link-id="23774449">
                 <span class="">
             Live Sport        </span>
             </a>
@@ -310,9 +310,9 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/Live-sport"
-                                            data-page-link-id="23774449"
-                            >
+        href="https://dnm23.github.io/ourlibrary.com/Live-sport" 
+                                            data-link-id="23774449">
+        
                 <span class="">
             Live Sport        </span>
             </a>
