--- a/moz-sh-o-n-z-sh/index.html
+++ b/moz-sh-o-n-z-sh/index.html
@@ -138,7 +138,8 @@
                     </ul>
         </li>
             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/live-sport" data-page-link-id="23458119">
+        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/Live-sport" data-link-id="23774449">
+
                 <span class="">
             Live Sport        </span>
             </a>
@@ -306,9 +307,10 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/live-sport"
-                                            data-page-link-id="23458119"
-                            >
+        href="https://dnm23.github.io/ourlibrary.com/Live-sport" 
+                                            data-link-id="23774449">
+
+        
                 <span class="">
             Live Sport        </span>
             </a>
