--- a/Live-sport/index.html
+++ b/Live-sport/index.html
@@ -927,7 +927,7 @@
         </div>
 </div><div id="jw-element-401357857" data-jw-element-id="401357857" class="jw-tree-node jw-element jw-button jw-node-is-last-child">
     <div class="jw-btn-container jw-btn-is-center">
-            <a class="jw-element-content jw-btn jw-btn--size-default jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: #242ca4;--jw-comp--button--on-primary-color: #ffffff;--jw-comp--button--primary-color-hover: #2d37ce;">
+            <a class="jw-element-content jw-btn jw-btn--size-default jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: #242ca4;--jw-comp--button--on-primary-color:aqua;--jw-comp--button--primary-color-hover: #2d37ce;">
                         <div class="jw-btn-caption">
                 Paypal            </div>
         </a>
