--- a/sr-l-kh-r-g/index.html
+++ b/sr-l-kh-r-g/index.html
@@ -383,7 +383,7 @@
     <div id="jw-element-254995312" data-jw-element-id="254995312" style="width: 25%" class="jw-tree-node jw-element jw-column jw-tree-container jw-node-is-first-child jw-responsive lt300 lt400 lt480 lt540 lt600 lt640 lt800">
     <div id="jw-element-254995432" data-jw-element-id="254995432" class="jw-tree-node jw-element jw-image jw-node-is-first-child">
     <div class="jw-intent jw-element-image jw-element-child jw-element-content jw-element-activeless jw-element-no-margin  jw-element-image-is-left" style="width: 100%;" data-high-res-path="https://primary.jwwb.nl/public/v/s/p/temp-vkjxumjbfoutpwainmro/ra7ba9/ccf551a52ab869acbe150c99e3aa5a84ce3803f75e54ade929941269aa8b6710.jpeg">
-            <a href="https://dnm23.github.io/ourlibrary.com/parts" data-page-link-id="17081279">                        <picture class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic" style="padding-top: 75.225225225225%;">
+            <a href="https://dnm23.github.io/ourlibrary.com/p" data-page-link-id="17081279">                        <picture class="jw-element-image__image-wrapper jw-image-is-square jw-intrinsic" style="padding-top: 75.225225225225%;">
                             <img class="jw-element-image__image jw-intrinsic__item" width="222" height="167" alt="" src="images/ccf551a52ab869acbe150c99e3aa5a84ce3803f75e54ade929941269aa8b6710.jpeg" srcset="images/ccf551a52ab869acbe150c99e3aa5a84ce3803f75e54ade929941269aa8b6710.jpeg 222w, images/ccf551a52ab869acbe150c99e3aa5a84ce3803f75e54ade929941269aa8b6710_1.jpeg 800w" sizes="(max-width: 640px) 100vw, (max-width: 960px) 23vw, 222px" loading="lazy">
                     </picture>
                 </a>
