--- a/p/index.html
+++ b/p/index.html
@@ -5,9 +5,9 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
         <meta http-equiv="X-UA-Compatible" content="IE=opera">
-        <link rel="canonical" href="https://dnm23.github.io/ourlibrary.com/parts">
+        <link rel="canonical" href="https://dnm23.github.io/ourlibrary.com/p">
         <meta property="og:title" content="parts | Ourlibrary">
-        <meta property="og:url" content="https://dnm23.github.io/ourlibrary.com/parts">
+        <meta property="og:url" content="https://dnm23.github.io/ourlibrary.com/p">
         
         <meta name="description" property="og:description" content="">
                 <script nonce="">
@@ -42,7 +42,7 @@
 <link rel="preconnect" href="https://assets.jwwb.nl">
 <link rel="stylesheet" type="text/css" href="css/style.css">    </head>
     <body id="top" class="jw-is-no-slideshow jw-header-is-image-text jw-is-segment-page jw-is-frontend jw-is-no-sidebar jw-is-no-messagebar jw-is-no-touch-device jw-is-no-mobile" data-jouwweb-page="17081279" data-jouwweb-segment-id="17081279" data-jouwweb-segment-type="page" data-template-threshold="960" data-template-name="beautysalon|fotografie" itemscope="" itemtype="https://schema.org/WebPage">
-        <meta itemprop="url" content="https://dnm23.github.io/ourlibrary.com/parts">
+        <meta itemprop="url" content="https://dnm23.github.io/ourlibrary.com/p">
         <div class="jw-background"></div>
         <div class="jw-body">
             <div class="jw-mobile-menu jw-mobile-is-text js-mobile-menu">
