--- a/Live-sport/index.html
+++ b/Live-sport/index.html
@@ -3,7 +3,7 @@
     <meta name="keyword" content="کتاب,سریال دوبله,فیلم دوبله, pdf فارسى، live-sport">
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome,opera,firefox">
         <link rel="canonical" href="https://dnm23.github.io/ourlibrary.com/live-sport">
         <meta property="og:title" content="Live sport | Ourlibrary">
         <meta property="og:url" content="https://dnm23.github.io/ourlibrary.com/live-sport">
