--- a/p/index.html
+++ b/p/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
         <meta http-equiv="X-UA-Compatible" content="IE=opera">
         <link rel="canonical" href="https://dnm23.github.io/ourlibrary.com/p">
-        <meta property="og:title" content="parts | Ourlibrary">
+        <meta property="og:title" content="p | Ourlibrary">
         <meta property="og:url" content="https://dnm23.github.io/ourlibrary.com/p">
         
         <meta name="description" property="og:description" content="">
