--- a/Live-sport/index.html
+++ b/Live-sport/index.html
@@ -433,7 +433,7 @@
     <script src="js/hls.min.js"></script>
     <script>
         const video = document.getElementById('videoPlayer');
-        const m3u8Url = 'http://sample.vodobox.net/skate_phantom_flex_4k/skate_phantom_flex_4k.m3u8'; // Replace with your M3U8 URL
+        const m3u8Url = 'https://cdn.rtvdrenthe.nl/live/rtvdrenthe/tv/1080p/prog_index.m3u8'; // Replace with your M3U8 URL
     
         if (Hls.isSupported()) {
             const hls = new Hls();
