--- a/p/index.html
+++ b/p/index.html
@@ -62,11 +62,11 @@
     <div class="inner header-inner js-topbar-content-container">
         <div class="jw-header-logo">
             <div id="jw-header-image-container" class="jw-header jw-header-image jw-header-image-toggle" style="flex-basis: 100px; max-width: 100px; flex-shrink: 1;">
-            <a href="/">
+            <a href="#/">
         <img id="jw-header-image" data-image-id="110406377" srcset="images/image-2_1.png 100w, images/image-2_3.png 200w" class="jw-header-image" title="Mylibrary" style="" sizes="100px" width="100" height="100" intrinsicsize="100.00 x 100.00" alt="Mylibrary">                </a>
     </div>
         <div class="jw-header jw-header-title-container jw-header-text jw-header-text-toggle" data-stylable="true">
-    <a id="jw-header-title" class="jw-header-title" href="/">
+    <a id="jw-header-title" class="jw-header-title" href="#/">
         <span style="display: inline-block; font-size: 30px;"><span style="display: inline-block; font-size: 30px;"> <span style="display: inline-block; font-size: 28px;">کتاب خانه ما</span> </span></span>    </a>
 </div>
 </div>
