--- a/Live-sport/index.html
+++ b/Live-sport/index.html
@@ -50,7 +50,7 @@
         <div class="jw-body">
             <div class="jw-mobile-menu jw-mobile-is-text js-mobile-menu">
             <span class="jw-mobile-menu__button jw-mobile-menu__button--dummy"></span>        <div class="jw-mobile-header jw-mobile-header--image-text">
-        <a class="jw-mobile-header-content" href="/">
+        <a class="jw-mobile-header-content" href="#/">
                             <img class="jw-mobile-logo jw-mobile-logo--square" src="images/image-2.png" srcset="images/image-2.png 1x, images/image-2_1.png 2x" alt="Ourlibrary" title="Ourlibrary">                                        <div class="jw-mobile-text">
                     <span style="display: inline-block; font-size: 30px;"><span style="display: inline-block; font-size: 30px;"> <span style="display: inline-block; font-size: 28px;">کتاب خانه ما</span> </span></span>                </div>
                     </a>
