--- a/Live-sport/index.html
+++ b/Live-sport/index.html
@@ -527,7 +527,7 @@ href="https://dnm23.github.io/ourlibrary.com/contact"
             <h3 style="text-align: center;" class="jw-heading-70"><strong><span style="color: #860f0f;">A vs</span></strong><span style="color: #860f0f;"> </span><span style="color: #860f0f;">B</span></h3>    </div>
 </div><div id="jw-element-402640130" data-jw-element-id="402640130" class="jw-tree-node jw-element jw-button">
     <div class="jw-btn-container jw-btn-is-center">
-            <a href="https://dnm23.github.io/live-sport.afg/tv2" target="_blank" rel="noopener" class="jw-element-content jw-btn jw-btn--size-default jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: #860f0f;--jw-comp--button--on-primary-color: #ffffff;--jw-comp--button--primary-color-hover: #b41414;">
+            <a href="https://dnm23.github.io/live-sport.afg/L2/tv2" target="_blank" rel="noopener" class="jw-element-content jw-btn jw-btn--size-default jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: #860f0f;--jw-comp--button--on-primary-color: #ffffff;--jw-comp--button--primary-color-hover: #b41414;">
                             <span class="jw-btn-icon">
                     <!--?xml version="1.0" encoding="iso-8859-1"?-->
 <!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
