--- a/farsi-f-rs/index.html
+++ b/farsi-f-rs/index.html
@@ -405,7 +405,7 @@ href="https://dnm23.github.io/ourlibrary.com/Live-sport"
     </div>
 </div><div id="jw-element-255011607" data-jw-element-id="255011607" class="jw-tree-node jw-element jw-button jw-node-is-last-child">
     <div class="jw-btn-container jw-btn-is-center">
-            <a href="https://drive.google.com/file/d/1ZEa0I8awSyjTQCFqeZ9iXupY5uURGFDX/view?usp=drive_link" class="jw-element-content jw-btn jw-btn--size-small jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: #611313;--jw-comp--button--on-primary-color: #ffffff;--jw-comp--button--primary-color-hover: #8c1b1b;">
+            <a href="https://drive.google.com/file/d/1ZEa0I8awSyjTQCFqeZ9iXupY5uURGFDX/view?usp=sharing" class="jw-element-content jw-btn jw-btn--size-small jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: #611313;--jw-comp--button--on-primary-color: #ffffff;--jw-comp--button--primary-color-hover: #8c1b1b;">
                         <div class="jw-btn-caption">
                 Download PDF            </div>
         </a>
@@ -475,7 +475,7 @@ href="https://dnm23.github.io/ourlibrary.com/Live-sport"
                     </div>
                     <div class="jw-credits-right">
                                                 <div id="jw-credits-tool">
-    <small>
+    <b> &copyright reserved</b> 
 </div>
                     </div>
                 </div>
