--- a/farsi-f-rs/index.html
+++ b/farsi-f-rs/index.html
@@ -475,7 +475,7 @@ href="https://dnm23.github.io/ourlibrary.com/Live-sport"
                     </div>
                     <div class="jw-credits-right">
                                                 <div id="jw-credits-tool">
-    <b> &copyright reserved</b> 
+     &copyright reserved
 </div>
                     </div>
                 </div>
