--- a/Live-sport/index.html
+++ b/Live-sport/index.html
@@ -973,6 +973,7 @@ href="https://dnm23.github.io/ourlibrary.com/contact"
     <a class="jw-scroll-top" href="#top">
         <span class="diamond__text">TOP</span>
     </a>
+	
 </div>
 <footer class="block-footer">
     <div data-section-name="footer" class="jw-section jw-section-footer jw-responsive">
@@ -986,6 +987,7 @@ href="https://dnm23.github.io/ourlibrary.com/contact"
                     </div>
                     <div class="jw-credits-right">
                                                 <div id="jw-credits-tool">
+							&copyright reserved
 
 </div>
                     </div>
