--- a/books/index.html
+++ b/books/index.html
@@ -396,6 +396,7 @@ href="https://dnm23.github.io/ourlibrary.com/contact"
                     </div>
                     <div class="jw-credits-right">
                                                 <div id="jw-credits-tool">
+                                                        &copyright reserved
   
 </div>
                     </div>
