--- a/english-n-l-s/index.html
+++ b/english-n-l-s/index.html
@@ -423,6 +423,7 @@ href="https://dnm23.github.io/ourlibrary.com/Live-sport"
                     </div>
                     <div class="jw-credits-right">
                                                 <div id="jw-credits-tool">
+                                                    &copyright reserved
     <small>
 </div>
                     </div>
