--- a/f-lm-h-o-doblh/index.html
+++ b/f-lm-h-o-doblh/index.html
@@ -425,6 +425,7 @@ href="https://dnm23.github.io/ourlibrary.com/Live-sport"
                     </div>
                     <div class="jw-credits-right">
                                                 <div id="jw-credits-tool">
+                                                    &copyright reserved
     <small>
 </div>
                     </div>
