--- a/films/index.html
+++ b/films/index.html
@@ -497,7 +497,8 @@
                     </div>
                     <div class="jw-credits-right">
                                                 <div id="jw-credits-tool">
-    <small>
+                                                        &copyright reserved
+
 </div>
                     </div>
                 </div>
