--- a/moz-sh-o-n-z-sh/index.html
+++ b/moz-sh-o-n-z-sh/index.html
@@ -400,6 +400,7 @@ href="https://dnm23.github.io/ourlibrary.com/Live-sport"
                     </div>
                     <div class="jw-credits-right">
                                                 <div id="jw-credits-tool">
+                                                    &copyright reserved
     <small>
 </div>
                     </div>
