--- a/n-z-sh/index.html
+++ b/n-z-sh/index.html
@@ -550,6 +550,7 @@
                     </div>
                     <div class="jw-credits-right">
                                                 <div id="jw-credits-tool">
+                                                    &copyright reserved
     <small>
 </div>
                     </div>
