--- a/p/index.html
+++ b/p/index.html
@@ -518,6 +518,7 @@
                     </div>
                     <div class="jw-credits-right">
                                                 <div id="jw-credits-tool">
+                                                    &copyright reserved
     <small>
 </div>
                     </div>
