--- a/p2/index.html
+++ b/p2/index.html
@@ -676,6 +676,7 @@
                     </div>
                     <div class="jw-credits-right">
                                                 <div id="jw-credits-tool">
+                                                    &copyright reserved
     <small>
 </div>
                     </div>
