--- a/p3/index.html
+++ b/p3/index.html
@@ -572,6 +572,7 @@
                     </div>
                     <div class="jw-credits-right">
                                                 <div id="jw-credits-tool">
+                                                        &copyright reserved
     <small>
 </div>
                     </div>
