--- a/sr-l-rh/index.html
+++ b/sr-l-rh/index.html
@@ -439,6 +439,7 @@ href="https://dnm23.github.io/ourlibrary.com/contact"
                     </div>
                     <div class="jw-credits-right">
                                                 <div id="jw-credits-tool">
+                                                        &copyright reserved
 
 </div>
                     </div>
