--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </li>
             <li class="jw-menu-item jw-menu-has-submenu">
 
-        <a class="jw-menu-link" href=https://dnm23.github.io/ourlibrary.com/books" data-page-link-id="17079931">
+            <a class="jw-menu-link js-active-menu-item" href="https://dnm23.github.io/ourlibrary.com/books" data-page-link-id="17079931">
                 <span class="">
             Books        </span>
                     <span class="jw-arrow jw-arrow-toplevel"></span>
