--- a/Live-sport/index.html
+++ b/Live-sport/index.html
@@ -582,7 +582,7 @@ href="https://dnm23.github.io/ourlibrary.com/contact"
 </svg>
                 </span>
                         <div class="jw-btn-caption">
-                Play 2            </div>
+                Play (🇩🇪)       </div>
         </a>
     </div>
 </div><div id="jw-element-402640131" data-jw-element-id="402640131" class="jw-tree-node jw-element jw-image">
