--- a/Live-sport/index.html
+++ b/Live-sport/index.html
@@ -397,7 +397,7 @@ href="https://dnm23.github.io/ourlibrary.com/contact"
         </div>
 </div><div id="jw-element-402640535" data-jw-element-id="402640535" class="jw-tree-node jw-element jw-image-text">
     <div class="jw-element-imagetext-text">
-            <h3 style="text-align: center;" class="jw-heading-70"><span style="color: #860f0f;"> Barcelona vs B-Munchen</span></h3>    </div>
+            <h3 style="text-align: center;" class="jw-heading-70"><span style="color: #860f0f;"> Barcelona vs B-Munich </span></h3>    </div>
 </div><div id="jw-element-402640124" data-jw-element-id="402640124" class="jw-tree-node jw-element jw-button">
     <div class="jw-btn-container jw-btn-is-center">
             <a href="https://dnm23.github.io/live-sport.afg/tv1" target="_blank" rel="noopener" class="jw-element-content jw-btn jw-btn--size-default jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: #860f0f;--jw-comp--button--on-primary-color: #ffffff;--jw-comp--button--primary-color-hover: #b41414;">
@@ -449,7 +449,7 @@ href="https://dnm23.github.io/ourlibrary.com/contact"
 </svg>
                 </span>
                         <div class="jw-btn-caption">
-                Play (🇬🇧)            </div>
+                Play (🇬🇧) <!---1-->           </div>
         </a>
     </div>
 </div><div id="jw-element-402640125" data-jw-element-id="402640125" class="jw-tree-node jw-element jw-image">
@@ -512,7 +512,7 @@ href="https://dnm23.github.io/ourlibrary.com/contact"
 </svg>
                 </span>
                         <div class="jw-btn-caption">
-                Play 5            </div>
+                Play () <!---5-->            </div>
         </a>
     </div>
 </div></div><div id="jw-element-402640119" data-jw-element-id="402640119" style="width: 25%" class="jw-tree-node jw-element jw-column jw-tree-container jw-responsive lt300 lt400 lt480 lt540 lt600 lt640 lt800">
@@ -524,7 +524,7 @@ href="https://dnm23.github.io/ourlibrary.com/contact"
         </div>
 </div><div id="jw-element-402640748" data-jw-element-id="402640748" class="jw-tree-node jw-element jw-image-text">
     <div class="jw-element-imagetext-text">
-            <h3 style="text-align: center;" class="jw-heading-70"><strong><span style="color: #860f0f;">A vs</span></strong><span style="color: #860f0f;"> </span><span style="color: #860f0f;">B</span></h3>    </div>
+            <h3 style="text-align: center;" class="jw-heading-70"><strong><span style="color: #860f0f;">Barcelona vs B-Munich </span></strong><span style="color: #860f0f;"> </span><span style="color: #860f0f;">B</span></h3>    </div>
 </div><div id="jw-element-402640130" data-jw-element-id="402640130" class="jw-tree-node jw-element jw-button">
     <div class="jw-btn-container jw-btn-is-center">
             <a href="https://dnm23.github.io/live-sport.afg/L2/tv2" target="_blank" rel="noopener" class="jw-element-content jw-btn jw-btn--size-default jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: #860f0f;--jw-comp--button--on-primary-color: #ffffff;--jw-comp--button--primary-color-hover: #b41414;">
@@ -582,7 +582,7 @@ href="https://dnm23.github.io/ourlibrary.com/contact"
 </svg>
                 </span>
                         <div class="jw-btn-caption">
-                Play (🇩🇪)       </div>
+                Play (🇩🇪) <!---2-->      </div>
         </a>
     </div>
 </div><div id="jw-element-402640131" data-jw-element-id="402640131" class="jw-tree-node jw-element jw-image">
@@ -651,7 +651,7 @@ href="https://dnm23.github.io/ourlibrary.com/contact"
 </svg>
                 </span>
                         <div class="jw-btn-caption">
-                Play 6            </div>
+                Play ()<!---6-->            </div>
         </a>
     </div>
 </div></div><div id="jw-element-402640120" data-jw-element-id="402640120" style="width: 25%" class="jw-tree-node jw-element jw-column jw-tree-container jw-responsive lt300 lt400 lt480 lt540 lt600 lt640 lt800">
@@ -663,7 +663,7 @@ href="https://dnm23.github.io/ourlibrary.com/contact"
         </div>
 </div><div id="jw-element-402640749" data-jw-element-id="402640749" class="jw-tree-node jw-element jw-image-text">
     <div class="jw-element-imagetext-text">
-            <h3 class="jw-heading-70" style="text-align: center;"><strong><span style="color: #860f0f;">A vs B</span></strong></h3>    </div>
+            <h3 class="jw-heading-70" style="text-align: center;"><strong><span style="color: #860f0f;">RB Leipzig vs Liverpool</span></strong></h3>    </div>
 </div><div id="jw-element-402640134" data-jw-element-id="402640134" class="jw-tree-node jw-element jw-button">
     <div class="jw-btn-container jw-btn-is-center">
             <a href="https://dnm23.github.io/live-sport.afg/tv3" target="_blank" rel="noopener" class="jw-element-content jw-btn jw-btn--size-default jw-btn--style-flat jw-btn--roundness-round" style="--jw-comp--button--primary-color: #860f0f;--jw-comp--button--on-primary-color: #ffffff;--jw-comp--button--primary-color-hover: #b41414;">
@@ -721,7 +721,7 @@ href="https://dnm23.github.io/ourlibrary.com/contact"
 </svg>
                 </span>
                         <div class="jw-btn-caption">
-                Play 3            </div>
+                Play (🇬🇧)<!---3-->           </div>
         </a>
     </div>
 </div><div id="jw-element-402640135" data-jw-element-id="402640135" class="jw-tree-node jw-element jw-image">
@@ -790,7 +790,7 @@ href="https://dnm23.github.io/ourlibrary.com/contact"
 </svg>
                 </span>
                         <div class="jw-btn-caption">
-                Play 7            </div>
+                Play ()<!---7-->            </div>
         </a>
     </div>
 </div></div><div id="jw-element-402640121" data-jw-element-id="402640121" style="width: 25%" class="jw-tree-node jw-element jw-column jw-tree-container jw-node-is-last-child jw-responsive lt300 lt400 lt480 lt540 lt600 lt640 lt800">
@@ -854,7 +854,7 @@ href="https://dnm23.github.io/ourlibrary.com/contact"
 </svg>
                 </span>
                         <div class="jw-btn-caption">
-                Play 4            </div>
+                Play (🇩🇪)<!---4-->            </div>
         </a>
     </div>
 </div><div id="jw-element-402640139" data-jw-element-id="402640139" class="jw-tree-node jw-element jw-image">
@@ -917,7 +917,7 @@ href="https://dnm23.github.io/ourlibrary.com/contact"
 </svg>
                 </span>
                         <div class="jw-btn-caption">
-                Play 8            </div>
+                Play ()<!---8-->            </div>
         </a>
     </div>
 </div></div></div><div id="jw-element-402686501" data-jw-element-id="402686501" class="jw-tree-node jw-element jw-spacer">
