--- a/english-n-l-s/index.html
+++ b/english-n-l-s/index.html
@@ -150,9 +150,9 @@
             </a>
                 </li>
             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/contact" data-page-link-id="17079822">
+        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/computer" data-page-link-id="24489667">
                 <span class="">
-            Contact        </span>
+            computer        </span>
             </a>
                 </li>
     
@@ -324,11 +324,11 @@ href="https://dnm23.github.io/ourlibrary.com/Live-sport"
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/contact"
-                                            data-page-link-id="17079822"
+        href="https://dnm23.github.io/ourlibrary.com/computer"
+                                            data-page-link-id="24489667"
                             >
                 <span class="">
-            Contact        </span>
+            computer        </span>
             </a>
                 </li>
             
