--- a/computer/index.html
+++ b/computer/index.html
@@ -73,19 +73,19 @@
             </a>
                     <ul class="jw-submenu">
                             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/books/farsi-f-rs" data-page-link-id="17079939">
+        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/farsi-f-rs" data-page-link-id="17079939">
                 <span class="">
             Farsi فارسی        </span>
             </a>
                 </li>
                             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/books/n-z-sh" data-page-link-id="17096406">
+        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/n-z-sh" data-page-link-id="17096406">
                 <span class="">
             انگیزیشی        </span>
             </a>
                 </li>
                             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/books/english-n-l-s" data-page-link-id="17079941">
+        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/english-n-l-s" data-page-link-id="17079941">
                 <span class="">
             English انگلیسی        </span>
             </a>
@@ -100,13 +100,13 @@
             </a>
                     <ul class="jw-submenu">
                             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/films/moz-sh-o-n-z-sh" data-page-link-id="17081981">
+        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/moz-sh-o-n-z-sh" data-page-link-id="17081981">
                 <span class="">
             اموزیشی و انگیزیشی        </span>
             </a>
                 </li>
                             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/films/f-lm-h-doblh" data-page-link-id="17081982">
+        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/f-lm-h-doblh" data-page-link-id="17081982">
                 <span class="">
             فیلم هاى دوبله        </span>
             </a>
@@ -121,13 +121,13 @@
             </a>
                     <ul class="jw-submenu">
                             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/series/sr-l-rh" data-page-link-id="17081081">
+        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/sr-l-rh" data-page-link-id="17081081">
                 <span class="">
             سریال کره ای        </span>
             </a>
                 </li>
                             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/series/sr-l-kh-r-g" data-page-link-id="17081084">
+        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/sr-l-kh-r-g" data-page-link-id="17081084">
                 <span class="">
             سریال خاریجی        </span>
             </a>
@@ -184,7 +184,7 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/books/farsi-f-rs"
+        href="https://dnm23.github.io/ourlibrary.com/farsi-f-rs"
                                             data-page-link-id="17079939"
                             >
                 <span class="">
@@ -196,7 +196,7 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/books/n-z-sh"
+        href="https://dnm23.github.io/ourlibrary.com/n-z-sh"
                                             data-page-link-id="17096406"
                             >
                 <span class="">
@@ -208,7 +208,7 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/books/english-n-l-s"
+        href="https://dnm23.github.io/ourlibrary.com/english-n-l-s"
                                             data-page-link-id="17079941"
                             >
                 <span class="">
@@ -237,7 +237,7 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/films/moz-sh-o-n-z-sh"
+        href="https://dnm23.github.io/ourlibrary.com/moz-sh-o-n-z-sh"
                                             data-page-link-id="17081981"
                             >
                 <span class="">
@@ -249,7 +249,7 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/films/f-lm-h-doblh"
+        href="https://dnm23.github.io/ourlibrary.com/f-lm-h-doblh"
                                             data-page-link-id="17081982"
                             >
                 <span class="">
@@ -278,7 +278,7 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/series/sr-l-rh"
+        href="https://dnm23.github.io/ourlibrary.com/sr-l-rh"
                                             data-page-link-id="17081081"
                             >
                 <span class="">
@@ -290,7 +290,7 @@
 >
         <a
         class="jw-menu-link"
-        href="https://dnm23.github.io/ourlibrary.com/series/sr-l-kh-r-g"
+        href="https://dnm23.github.io/ourlibrary.com/sr-l-kh-r-g"
                                             data-page-link-id="17081084"
                             >
                 <span class="">
