--- a/computer/index.html
+++ b/computer/index.html
@@ -2,7 +2,7 @@
         
         <meta name="keyword" content="کتاب,سریال دوبله,فیلم دوبله, pdf فارسى، live-sport"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,opera,firefox,chrome">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,opera,firefox,chrome, safari">
         <link rel="canonical" href="https://dnm23.github.io/ourlibrary.com/computer">
         <meta property="og:title" content="Computer | Ourlibrary">
         <meta property="og:url" content="https://dnm23.github.io/ourlibrary.com/computer">
