--- a/films/index.html
+++ b/films/index.html
@@ -58,7 +58,7 @@
         <nav class="menu jw-menu-copy clear">
             <ul id="jw-menu" class="jw-menu jw-menu-horizontal">
             <li class="jw-menu-item">
-        <a class="jw-menu-link" href="/" data-page-link-id="17079820">
+        <a class="jw-menu-link" href="https://dnm23.github.io/ourlibrary.com/" data-page-link-id="17079820">
                 <span class="">
             Home        </span>
     </a>
